# obbyai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  prompts.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
tests/: test_tools.py
tools/: calculator.py  datetime_tool.py  file_processor.py  python_exec.py  rag.py  read_url.py  web_search.py
